@@ -5,4 +5,5 @@ pipeglade
 *~
 \#*#
 *fifo
+test.log
 output.pdf
