@@ -6,6 +6,8 @@
   * Add missing GtkStatusbar command remove_all_id.
   * GtkStatusbar commands take non-whitespace strings as context id,
   not just integers.
+  * Add command line option -l for logging duration of pipeglade
+  command execution.
 
 4.6.0 (2016-03-27)
 ------------------
